@@ -62,20 +62,19 @@ protected:
 	virtual void DoDataExchange(CDataExchange* pDX);    // DDX/DDV support
 
 	virtual BOOL OnInitDialog();
-	afx_msg void OnPaint();
+	virtual void OnOK();
 	afx_msg HCURSOR OnQueryDragIcon();
-
-	DECLARE_MESSAGE_MAP()
-public:
-	CHistoryCombo m_URLCombo;
-	CString m_path;
-	CString m_URL;
-	CString m_rev;
-	afx_msg void OnEnUpdateRev();
-	CEdit m_revctrl;
+	afx_msg void OnPaint();
 	afx_msg void OnBnClickedBrowse();
 	afx_msg void OnBnClickedNewest();
 	afx_msg void OnBnClickedRevisionN();
-protected:
-	virtual void OnOK();
+
+	DECLARE_MESSAGE_MAP()
+
+	CString m_rev;
+	CHistoryCombo m_URLCombo;
+public:
+	CString m_path;
+	CString m_URL;
+	SVNRev	Revision;
 };
